// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Block renders correctly 1`] = `
<jest>
  <time
    class="ecl-date-block"
    datetime="2023-06-01"
  >
    <span
      class="ecl-date-block__daytime"
    >
      2023-06-01
    </span>
    <span
      aria-hidden="true"
      class="ecl-date-block__day"
    >
      01-02
    </span>
    <abbr
      aria-hidden="true"
      class="ecl-date-block__month"
      title="September / June"
    >
      Sept-Jun
    </abbr>
    <span
      aria-hidden="true"
      class="ecl-date-block__year"
    >
      2023
    </span>
  </time>
</jest>
`;

exports[`Date Block renders correctly with extra attributes 1`] = `
<jest>
  <time
    class="ecl-date-block"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    datetime="2023-06-01"
  >
    <span
      class="ecl-date-block__daytime"
    >
      2023-06-01
    </span>
    <span
      aria-hidden="true"
      class="ecl-date-block__day"
    >
      01-02
    </span>
    <abbr
      aria-hidden="true"
      class="ecl-date-block__month"
      title="September / June"
    >
      Sept-Jun
    </abbr>
    <span
      aria-hidden="true"
      class="ecl-date-block__year"
    >
      2023
    </span>
  </time>
</jest>
`;

exports[`Date Block renders correctly with extra class names 1`] = `
<jest>
  <time
    class="ecl-date-block custom-class custom-class--test"
    datetime="2023-06-01"
  >
    <span
      class="ecl-date-block__daytime"
    >
      2023-06-01
    </span>
    <span
      aria-hidden="true"
      class="ecl-date-block__day"
    >
      01-02
    </span>
    <abbr
      aria-hidden="true"
      class="ecl-date-block__month"
      title="September / June"
    >
      Sept-Jun
    </abbr>
    <span
      aria-hidden="true"
      class="ecl-date-block__year"
    >
      2023
    </span>
  </time>
</jest>
`;
